--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
+    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.2"
